Revert "Bug 1074033 - Edge gestures overlapping"
This reverts commit eee9520cfa8bc579b35fa6e848f3fc0c37167b08.

--- a/apps/system/style/action_menu/action_menu_extended.css
+++ b/apps/system/style/action_menu/action_menu_extended.css
@@ -32,7 +32,6 @@ form[role="dialog"][data-type="object"] > menu > button.tail-icon {
 
 form[role="dialog"][data-type="action"],
 form[role="dialog"][data-type="object"] {
-	position: absolute;
 	visibility: hidden;
 	transform: translateY(100%);
 	transition: transform ease-in-out .3s, visibility .3s;
